fix: spacing fix

--- a/src/components/Agency/agency.sass
+++ b/src/components/Agency/agency.sass
@@ -1,10 +1,7 @@
 @use '../../styles/variables'
 
-
-.agency-texts
-    color: variables.$white
-    text-align: center
-    margin-top: variables.$m-3
+.agency-spacing
+    margin-top: 5rem
 
 .agency-title
     padding-top: 5rem
@@ -21,13 +18,11 @@
     font-weight: variables.$font-weight-normal
     margin-top: variables.$m-0-5
 
-
-
 .agency-cards
     display: grid
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr))
-    gap: 1.5rem
-    margin-top: variables.$m-3
+    gap: 2rem
+    margin-top: variables.$m-0-5
     padding: 1rem
     justify-content: center
     color: variables.$white
@@ -58,7 +53,7 @@
     font-size: 1.5rem
     color: variables.$white
     font-weight: 200
-    padding-left: 1rem 
+    padding-left: 1rem
 
 .swiper
     width: 100%
@@ -68,7 +63,6 @@
     width: 100%
     height: 100%
     object-fit: contain
-
 
 // mobile
 @media screen and (max-width: 767px)
@@ -94,5 +88,3 @@
     .label-counter
         font-size: 2rem
         padding-left: 0
-
-  
