--- a/src/components/Projects/project.sass
+++ b/src/components/Projects/project.sass
@@ -8,6 +8,7 @@
 
 /* From Uiverse.io by gharsh11032000 */ 
 .card-project
+  margin-top: variables.$m-1-5
   position: relative
   width: 100%
   height: 100%
